--- a/desafios/desafio012/style.css
+++ b/desafios/desafio012/style.css
@@ -27,7 +27,7 @@ header > h1 {
     text-align: center;
 }
 
-p {
+header > p {
     font-size: 20px;
     text-align: center;
 }
@@ -46,14 +46,46 @@ header > p > a {
 }
 
 #art1 {
-    position: relative;
-    padding-top: 60px;
-    padding-left: 30px;
+   
+    background-attachment: fixed;
+    padding-top: 60px;    
     font-size: 24px;
     font-family: 'font2';
+    margin: 0;
+}
+
+article {
+    padding-left: 0px;
+    margin: 0;
+}
+
+main {
+    padding-left: 30px;
+    height: 300px;
+    padding-bottom: 100px;
+}
+
+main#foto > p {
+    background-color: rgba(0, 0, 0, 0.486);
+    max-width: 300px;
+    color: white;
 }
 
 img {
     
     max-width: 640px;
+}
+
+#img1 {
+        background-attachment: fixed;
+}
+
+main#foto {
+    background-size: cover;
+    background-image: url('imagens/background001.jpg');
+    background-attachment: fixed;
+    background-position: top right;
+    margin: 0;
+    
+    
 }
